# ORYX-core

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
assets/: README.md
cad/: __init__.py  _cq.py  build.py  channels.py  electronics_mounts.py  hull.py  nozzle_array.py  parameters.py  plenum.py  propulsion_interface.py  ribs.py
docs/: architecture.md  bibliography.md  decision_log.md  philosophy.md  research_log.md  roadmap.md
electronics/: README.md
experiments/: README.md
experiments/template/: RECORD.md
firmware/: README.md
flight_control/: __init__.py  allocator.py  wrench.py
optimization/: __init__.py  objectives.py  parameter_space.py  sweep.py
propulsion/: __init__.py  base.py  registry.py
propulsion/cells/: __init__.py  combustion.py  compressed_gas.py  edf.py  ion.py  plasma.py
research/: README.md
research/hypotheses/: 0001-distributed-fluid-propulsion-vs-discrete-rotors.md  TEMPLATE.md
scripts/: generate_cad.py  new_experiment.py  run_sweep.py
simulation/: __init__.py  energy.py  environment.py  generic_propulsion.py  logger.py  rigid_body.py  thermal.py  vehicle.py
tests/: conftest.py  test_cad_geometry.py  test_cad_parameters.py  test_generic_propulsion.py  test_optimization.py  test_propulsion.py  test_rigid_body.py  test_thrust_allocator.py  test_vehicle.py
unreal/: README.md
